# cygnus

./: .gitignore  README.md  pyproject.toml  setup.py  start.sh  start_backend.sh  start_frontend.sh
config/: config.yaml
cygnus/: config.py  database.py  embeddings.py  main.py  models.py  routes.py  scheduler.py  storage.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.js  App.tsx  index.css
frontend/src/components/: Dashboard.js  FileList.tsx  FileManager.js  FileUpload.tsx  Login.js  Register.js  Search.js  ThemeToggle.js
frontend/src/config/: config.js
frontend/src/context/: ThemeContext.js
frontend/src/pages/: Files.tsx  Home.tsx  NotFound.tsx  Search.tsx
frontend/src/services/: authService.js  fileService.js  profileService.js  searchService.js
frontend/src/types/: file.ts
src/cygnus/: __init__.py  app.py  config.py  indexer.py  main.py  models.py  worker.py
