[tool.poetry]
name = "cygnus"
version = "0.1.0"
description = "A Python library"
authors = ["Yasas"]
readme = "README.md"
packages = [
    { include = "cygnus", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
