[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cygnus"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "Yasas Senarath", email = "12231659+ysenarath@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click>=8.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-restx>=1.3.2",
    "omegaconf>=2.3.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
cygnus = "cygnus.main:cli"

[project.urls]
Documentation = "https://github.com/ysenarath/cygnus#readme"
Issues = "https://github.com/ysenarath/cygnus/issues"
Source = "https://github.com/ysenarath/cygnus"

[tool.hatch.version]
path = "src/cygnus/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cygnus tests}"

[tool.coverage.run]
source_pkgs = ["cygnus", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
cygnus = ["src/cygnus", "*/cygnus/src/cygnus"]
tests = ["tests", "*/cygnus/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
